correction mobile

--- a/web/src/scss/custom.scss
+++ b/web/src/scss/custom.scss
@@ -7,7 +7,7 @@
   background: #2A3F54;
 
   @media (max-width: 768px) {
-    padding-bottom: 300px;
+    padding-bottom: 100px;
   }
 }
 
@@ -22,6 +22,7 @@
 .nav-sm .container.body .col-md-3.left_col.menu_fixed {
   position: fixed;
   height: 100vh;
+  overflow: scroll;
 }
 
 .nav-sm .container.body .col-md-3.left_col .mCSB_container,
